@@ -5,7 +5,6 @@ import com.example.repository.ReservationRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ReservationService {
@@ -32,13 +31,13 @@ public class ReservationService {
     public List<Reservation> getReservationsByUserId(Long userId) {
         return reservationRepository.findAll().stream()
             .filter(r -> r.getUser().getId().equals(userId))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<Reservation> getReservationsBySlotId(Long slotId) {
         return reservationRepository.findAll().stream()
             .filter(r -> r.getSlot().getId().equals(slotId))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
